# maomix

./: .gitignore  CMakeLists.txt  Makefile  README.md
maomix/: app.hpp  busses.hpp  channels.hpp  connection.hpp  discovery.hpp  fx.hpp  knob.hpp  line.hpp  main.hpp  menu.hpp  meter.hpp  ret.hpp  state.hpp  ui.hpp
maomix/glfw/: ui.hpp
src/: app.cpp  busses.cpp  channels.cpp  connection.cpp  discovery.cpp  fx.cpp  knob.cpp  line.cpp  main.cpp  maomix.cpp  menu.cpp  meter.cpp  mixeroscpp.cpp  ret.cpp  state.cpp  ui.cpp
src/glfw/: ui.cpp
